syntax = "proto3";

package order;

option go_package = "grpc-microservices/proto/order";

// Order Service Definition
service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (OrderResponse);
  rpc GetOrder (GetOrderRequest) returns (OrderResponse);
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrdersByUserId (GetOrdersByUserIdRequest) returns (ListOrdersResponse);
}

// Messages
message Order {
  string id = 1;
  string user_id = 2;
  string product_name = 3;
  int32 quantity = 4;
  double total_price = 5;
  string status = 6;
}

message CreateOrderRequest {
  string user_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double total_price = 4;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrdersByUserIdRequest {
  string user_id = 1;
}

message ListOrdersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message OrderResponse {
  Order order = 1;
  string message = 2;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}